--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 01</h2>
-            <p>Texto artigo 01</p>
+            <h2>HTML5 CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam delectus nihil in amet quaerat numquam cupiditate, quam iure, harum, impedit ipsam libero veritatis molestias! Aliquid mollitia totam velit tempore reiciendis.</p>
         </article>
         <article>
-            <h2>Artigo 02</h2>
-            <p>Texto artigo 02</p>
+            <h2>Javascript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, debitis dicta numquam expedita, rem placeat, amet natus architecto eaque animi assumenda aliquid nostrum esse tenetur perspiciatis possimus vitae culpa minus?</p>
         </article>
     </main>
 
