--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/header.jpg" alt="COXA" width="550px" height="150px">
         </header>
         <article>
             <h2>HTML5 CSS3</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam delectus nihil in amet quaerat numquam cupiditate, quam iure, harum, impedit ipsam libero veritatis molestias! Aliquid mollitia totam velit tempore reiciendis.</p>
+            <img class="lado" src="imagens/instagram.png" alt="insta" width="100px" height="100px">
+            <p>Instagram</p>
+            <p><a href="https://www.instagram.com/u__vine/">Acesse meu instagram</a></p>
         </article>
         <article>
             <h2>Javascript</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint, debitis dicta numquam expedita, rem placeat, amet natus architecto eaque animi assumenda aliquid nostrum esse tenetur perspiciatis possimus vitae culpa minus?</p>
+            <img class="lado" src="imagens/twitter.png" alt="TW" width="90px" height="75px">
+            <p>Twitter</p>
+            <p><a href="https://twitter.com/uVine__">Acesse meu twitter</a></p>
         </article>
     </main>
 
