--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <header>
-            <h1>Cursos Grátis</h1>
+            <h1>Meu perfil</h1>
             <img src="imagens/header.jpg" alt="COXA" width="550px" height="150px">
         </header>
         <article>
